# templates

./: README.md
cpp/: .clang-format  CMakeLists.txt  clang-format.txt  premake5.lua
latex/: titlepage.tex
